
  HCAT-296 Hcatalog should be able talk to secure hbase server using hbase delegation tokens (rohini via toffer)

  HCAT-249 Rework JSON StorageDriver into a JSON SerDe (khorgath via gates)

  HCAT-255 Define hadoop properties on the hcat command line (ctdean via gates)

  HCAT-2 Support nested schema conversion between Hive an Pig (julienledem via hashutosh)

  IMPROVEMENTS
  HCAT-68 Logging from HCat (avandana via toffer)

  HCAT-383 Add clover to build.xml (gates)

  HCAT-372 Add filter information to Load/Store and Input/Output docs (lefty via gates)

  HCAT-379 Fix mapred.out.dir hack in FileOutputCommitterContainer (toffer)

  HCAT-69 Fix token usage from HCat (toffer)

  HCAT-352 Need tests for complex types (gates)

  HCAT-268 Remove remnants of storage drivers. (rohini via gates)

  HCAT-306 Need more end-to-end tests (gates)

  HCAT-130 Documentation improvements (gates and lefty via gates)

  HCAT-266 Upgrade HBase dependency to 0.92 (thw via toffer)

  HCAT-243 HCat e2e tests need to change to not use StorageDrivers (gaets)

  HCAT-256 HCatalog should provide its classpath to tools (gates)

  HCAT-266 Upgrade HBase dependency to 0.92. (thw via toffer)

  HCAT-253 HBase revision manager should configure/drop znodes in the create/drop table meta hooks in the storage handler. (avandana via toffer)

  HCAT-259 Make readFields() and write() in LazyHCatRecord work (gates via khorgath)

  HCAT-194. Better error messages for HCatalog access control errors (julienledem via hashutosh)  
  
  OPTIMIZATIONS

  BUG FIXES
  HCAT-380 If pig script does load then order by, hive-site.xml doesn't seem to propagate properly (toffer)

  HCAT-396 src-release leaves out lib directory (gates)

  HCAT-393 Several hcat 0.4 document fixes (daijy via gates)

  HCAT-395 Hcat 0.4 last minute doc fixes (gates)

  HCAT-382 NPE in pig when a binary field is null (rohini vi avandana)

  HCAT-386 e2e tests should respect JAVA_HOME when it's set (gates)
