@@ -96,6 +96,8 @@ Release 0.4.0 - Unreleased
   HCAT-2 Support nested schema conversion between Hive an Pig (julienledem via hashutosh)
 
   IMPROVEMENTS
+  HCAT-373 ProgressReporter should work with both old and new MR API (traviscrawford via toffer) 
+
   HCAT-68 Logging from HCat (avandana via toffer)
 
   HCAT-383 Add clover to build.xml (gates)
